# CTEC-FMS

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: CTEC-windows.slint  app-window.slint
