[package]
name = "CTEC-FMS"
version = "0.0.1"
edition = "2024"
authors = ["Ethan Hartshorn", "Ethan Hartshorn <ethanhartshorn488@outlook.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.11.0"

[build-dependencies]
slint-build = "1.11.0"

[build]
incremental = true

[profile.dev]
opt-level = 1
debug = false
incremental = true
codegen-units = 16

[profile.release]
codegen-units = 1
lto = "fat"